--- a/SVM_Final_Models/SVM_PCA_BGR_tuning.ipynb
+++ b/SVM_Final_Models/SVM_PCA_BGR_tuning.ipynb
@@ -20,25 +20,18 @@
     "import glob\n",
     "import time\n",
     "import mlflow\n",
-    "import random\n",
-    "import shutil\n",
     "import itertools\n",
     "\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
-    "from PIL import Image\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn import svm\n",
-    "from sklearn.model_selection import cross_validate, StratifiedKFold\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.metrics import (\n",
-    "    make_scorer,\n",
     "    accuracy_score,\n",
     "    precision_score,\n",
     "    recall_score,\n",
     "    f1_score,\n",
-    "    confusion_matrix,\n",
     ")"
    ]
   },
